--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,7 +7,8 @@
     <title>Challenge Aridos</title>
     
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -106,8 +107,8 @@
             <img src="img/Logo.png" alt="Logo Árido">
             <ul>
                 <li><a class="active" href="#"> Usuarios</a></li>
-                <li><a href="#">Alta Usuario</a></li>
-                <li><a href="#">Grupo de Seguridad</a></li>
+                <li><a href="alta.html">Alta Usuario</a></li>
+                <li><a href="grupos.html">Grupo de Seguridad</a></li>
             </ul>
         </section>
         <svg
